--- a/EB_Genes/Snakefile
+++ b/EB_Genes/Snakefile
@@ -38,4 +38,4 @@ rule search:
                     break
 
         eb_genes=DataFrame(eb_genes)
-        eb_genes.to_csv(output[0],sep='\t',index=False)          
+        eb_genes.to_csv(output[0],sep='\t',index=False,header=None)          
